--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
                     </li>
 
                     <li class="nav-item">
-                        <a href="#./flokipaper.pdf" class="nav-link smoothScroll">Whitepaper</a>
+                        <a href="./flokipaper.pdf" class="nav-link smoothScroll">Whitepaper</a>
                     </li>
 
                 </ul>
