--- a/index.html
+++ b/index.html
@@ -116,11 +116,13 @@ https://www.tooplate.com/view/2119-gymso-fitness
                    
                     <h2 class="mb-3 text-white" data-aos="fade-up">Floki One</h2>
 
-                    <h6 class="mb-4 text-white" data-aos="fade-up">The first Floki token on the Harmony One mainnet, as well as one of the OG projects on the chain.</h6>
+                    <h6 class="mb-4 text-white" data-aos="fade-up">The first Floki token on the Harmony One mainnet, as well as one of the OG projects on the chain.</h6> 
+                    <br>
+
 
                     <p data-aos="fade-up" data-aos-delay="200">Launched on September 12th, 2021. </p>
 
-                    <a href="https://viper.exchange/#/swap?inputCurrency=0x24b6179e4062ed9baeace0e6081dbd55b6072380" class="btn custom-btn bg-color mt-3" data-aos="fade-up" data-aos-delay="300" data-toggle="modal" data-target="https://viper.exchange/#/swap?inputCurrency=0x24b6179e4062ed9baeace0e6081dbd55b6072380">Buy now!</a>
+                    <a href="https://viper.exchange/#/swap?inputCurrency=0x24b6179e4062ed9baeace0e6081dbd55b6072380" class="btn custom-btn bg-color mt-3" data-aos="fade-up" data-aos-delay="300" data-toggle="modal" data-target="https://viper.exchange/#/swap?inputCurrency=0x24b6179e4062ed9baeace0e6081dbd55b6072380">Buy now on ViperSwap!</a>
                 </div>
 
                 <div class="mr-lg-auto mt-3 col-lg-4 col-md-6 col-12">
@@ -129,6 +131,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                                  <img src="./images/logo-big.png" class="img-fluid">
                                </div>
+
                           </div>
                      </div>
                 </div>
@@ -173,7 +176,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                         <center>
                                         <h3 class="mb-1">More than just a meme</h3>
 
-                                        <p class="mt-3">Floki One will be one of the biggest tokens on Harmony One because it is no longer just a meme coin. Soon, we will be launching our own NFT line, with a side release of limited NFTs for those who stood by us when the going was tough. Furthermore, we will be creating a play-to-earn game that will allow the community members a chance to win some free $ONE!</p>
+                                        <p class="mt-3">Floki One will be one of the biggest tokens on Harmony One because it is no longer just a meme coin. Soon, we will be launching our own NFT line, with a side release of limited NFTs for those who stood by us when the going was tough. Furthermore, we will be creating two play-to-earn games that will allow the community members a chance to win some free $ONE or $FLOKI!</p>
                                     </center>
                                     </div>
                                 </div>
@@ -236,7 +239,8 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                         <center>
                                         <h3 class="mb-1">Download MetaMask</h3>
 
-                                        <p class="mt-3">Keep your seed phrase a secret! Never share it with anyone and store it properly!</p>
+                                        <p class="mt-3">You should also be able to purchase $FLOKI via Trust Wallet; however, we personally recommend MetaMask. Please refer to this <a href="https://cryptonews.com/guides/metamask-guide-how-to-set-up-metamask-wallet.htm">guide</a> 
+                                         to learn how to install MetaMask. Also, please keep your seed phrase a secret! Never share it with anyone and store it properly!</p>
                                     </center>
                                     </div>
                                 </div>
@@ -268,7 +272,9 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                                         
 
-                                        <p class="mt-3">You can either click on the link provided on our website or go to ViperSwap and enter the contract address to trade for Floki ONE.</p>
+                                        <p class="mt-3">If you scroll up, you'll come caross a button that is labeled "Buy now on ViperSwap!". Clicking that will redirect you to ViperSwap and with Floki One automatically loaded. You may also <a href="https://viper.exchange/#/swap?inputCurrency=0x24b6179e4062ed9baeace0e6081dbd55b6072380">click</a> here to buy the token. If by chance you are having trouble loading Floki One on Viper, please manually add the contract address. <br>
+
+                                        </p>
                                     </center>
                                     </div>
                                 </div>
