--- a/index.html
+++ b/index.html
@@ -216,9 +216,25 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                 <center>
                                  <div class="nomics-ticker-widget" data-name="Floki ONE" data-base="FLOKI8" data-quote="USD"></div><script src="https://widget.nomics.com/embed.js"></script>
                              </center>
-
                     </div>
+                          <div class="col-lg-12 col-12 text-center">
+                                <h2 class="text-white" data-aos="fade-up">Listings</h2>
+                                <br>
+
+                                   <div style="text-align: center; width:100%">
+<div style="float:left;">
+   <a href="https://nomics.com/assets/floki8-floki-one"> <img height="150" src="./images/nomics.png" width="150" /></a></div>
+<div style="display:inline-block;">
+	<a href="https://www.coingecko.com/en/coins/floki-one">
+    <img height="150" src="./images/coingecko.png" width="150" /></a></div>
+<div style="float:right;">
+	<a href="https://www.livecoinwatch.com/price/FlokiONE-_____FLOKI">
+    <img height="150" src="./images/livecoinwatch.png" width="150" /></a>
+                                        </div>
+</div>
+                         
                </div>
+                    </div>
      </section>
 
       <section class="guide section" id="guide">
