--- a/index.html
+++ b/index.html
@@ -222,15 +222,16 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                 <br>
 
                                    <div style="text-align: center; width:100%">
-<div style="float:left;">
-   <a href="https://nomics.com/assets/floki8-floki-one"> <img height="150" src="./images/nomics.png" width="150" /></a></div>
-<div style="display:inline-block;">
+<div class="row">
+	<div class="column">
+   <a href="https://nomics.com/assets/floki8-floki-one"> <img height="150" src="./images/nomics.png" width="150" /></a>
+</div>
+<div class="column">
 	<a href="https://www.coingecko.com/en/coins/floki-one">
     <img height="150" src="./images/coingecko.png" width="150" /></a></div>
-<div style="float:right;">
+<div class="column">
 	<a href="https://www.livecoinwatch.com/price/FlokiONE-_____FLOKI">
-    <img height="150" src="./images/livecoinwatch.png" width="150" /></a>
-                                        </div>
+    <img height="150" src="./images/livecoinwatch.png" width="150" /></a></div>
 </div>
                          
                </div>
