--- a/index.html
+++ b/index.html
@@ -222,12 +222,10 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                 <br>
 
                                    <div style="text-align: center; width:100%">
-<div class="row">
-	
-<div class="column">
+<div style="display:inline-block;">
 	<a href="https://www.coingecko.com/en/coins/floki-one">
     <img height="150" src="./images/coingecko.png" width="150" /></a></div>
-<div class="column">
+<div style="display:inline-block;">
 	<a href="https://www.livecoinwatch.com/price/FlokiONE-_____FLOKI">
     <img height="150" src="./images/livecoinwatch.png" width="150" /></a></div>
 </div>
