--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                                    <div style="text-align: center; width:100%">
 <div style="display:inline-block;">
+   <a href="https://nomics.com/assets/floki8-floki-one"> <img height="150" src="./images/nomics.png" width="150" /></a></div>
+<div style="display:inline-block;">
 	<a href="https://www.coingecko.com/en/coins/floki-one">
     <img height="150" src="./images/coingecko.png" width="150" /></a></div>
 <div style="display:inline-block;">
